[workspace]
members = [
  "src/ic_cose_canister",
  "src/ic_cose",
  "src/ic_cose_types",
  "src/ic_wasm_canister",
]
resolver = "2"

[profile.release]
debug = 'none'
lto = true
strip = true
opt-level = 's'

[workspace.package]
version = "0.9.3"
edition = "2021"
repository = "https://github.com/ldclabs/ic-cose"
keywords = ["config", "cbor", "canister", "icp", "encryption"]
categories = ["web-programming"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
async-trait = "0.1"
candid = "0.10"
ciborium = "0.2"
futures = "0.3"
serde = "1"
serde_bytes = "0.11"
k256 = { version = "0.13", features = ["ecdsa", "schnorr"] }
ed25519-dalek = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hmac = "0.12"
hkdf = "0.12"
hex = "0.4"
sha2 = "0.10"
sha3 = "0.10"
num-traits = "0.2"
ic-cdk = "0.19"
ic-cdk-timers = "1.0"
ic-stable-structures = "0.7"
icrc-ledger-types = "0.1"
ic-certification = "3.0"
ic-canister-sig-creation = "1.3"
ic-agent = "0.44"
ic_auth_types = "0.7"
ic_auth_verifier = { version = "0.7" }
ic-vetkeys = "0.6"
rand = "0.9"
coset = "0.4"
aes-gcm = "0.10"
ic-secp256k1 = { version = "0.3" }
ic-ed25519 = { version = "0.4" }
ic-dummy-getrandom-for-wasm = "0.1"
tokio = { version = "1" }

[workspace.metadata.cargo-shear]
ignored = ["ic-dummy-getrandom-for-wasm"]
