[package]
name = "ic_cose"
description = "The Rust version of the client SDK for the IC-COSE canister."
publish = true
repository = "https://github.com/ldclabs/ic-cose/tree/main/src/ic_cose"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
ic_cose_types = { path = "../ic_cose_types", version = "0.9" }
async-trait = { workspace = true }
candid = { workspace = true }
futures = { workspace = true }
serde_bytes = { workspace = true }
rand = { workspace = true }
ic-agent = { workspace = true }
x25519-dalek = { workspace = true }
ic_auth_types = { workspace = true }
ic-vetkeys = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
tokio = { workspace = true, features = ["full"] }
