[package]
name = "ic_cose_canister"
description = "A decentralized COnfiguration service with Signing and Encryption on the Internet Computer."
publish = false
repository = "https://github.com/ldclabs/ic-cose/tree/main/src/ic_cose_canister"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ciborium = { workspace = true }
const-hex = { workspace = true }
ic-cdk = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
ic-crypto-secp256k1 = { workspace = true }
ic-crypto-ed25519 = { workspace = true }
ic-canister-sig-creation = { workspace = true }
ic-certification = { workspace = true }
ic-crypto-standalone-sig-verifier = { workspace = true }
getrandom = { version = "0.2", features = ["custom"] }
ic_cose_types = { path = "../ic_cose_types", version = "0.5" }
