[package]
name = "ic_cose_canister"
description = "A decentralized COnfiguration service with Signing and Encryption on the Internet Computer."
publish = false
repository = "https://github.com/ldclabs/ic-cose/tree/main/src/ic_cose_canister"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic_cose_types = { path = "../ic_cose_types", version = "0.9" }
candid = { workspace = true, features = ["value", "printer"] }
ciborium = { workspace = true }
hex = { workspace = true }
ic-cdk = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
sha3 = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
ic-secp256k1 = { workspace = true }
ic-ed25519 = { workspace = true }
ic-canister-sig-creation = { workspace = true }
ic-certification = { workspace = true }
ic_auth_types = { workspace = true }
ic_auth_verifier = { workspace = true }
ic-dummy-getrandom-for-wasm = { workspace = true }
