[package]
name = "ic_cose_types"
description = "A Rust types library used for integrating with IC-COSE."
publish = true
repository = "https://github.com/ldclabs/ic-cose/tree/main/src/ic_cose_types"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
candid = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
num-traits = { workspace = true }
ciborium = { workspace = true }
icrc-ledger-types = { workspace = true }
ic-cdk = { workspace = true }
k256 = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
hmac = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
coset = { workspace = true }
aes-gcm = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
