[package]
name = "ic_cose_types"
description = "A Rust types library used for integrating with IC-COSE."
publish = true
repository = "https://github.com/ldclabs/ic-cose/tree/main/src/ic_cose_types"
version = "0.10.2"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
candid = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
num-traits = { workspace = true }
cbor2 = { workspace = true }
icrc-ledger-types = { workspace = true }
ic-cdk-management-canister = { workspace = true }
k256 = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
hmac = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
cose2 = { workspace = true }
aes-gcm = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
