[package]
name = "ic_object_store"
description = "The Rust version of the client SDK for the IC Object Store canister."
publish = true
repository = "https://github.com/ldclabs/ic-cose/tree/main/src/ic_object_store"
version = "0.6.9-patch1"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
candid = { workspace = true }
serde_bytes = { workspace = true }
rand = { workspace = true }
ic-agent = { workspace = true }
object_store = { workspace = true }
chrono = { workspace = true }
aes-gcm = { workspace = true }
ic_cose_types = { path = "../ic_cose_types", version = "0.6" }

[patch.crates-io]
candid = { git = "https://github.com/ldclabs/candid.git", rev = "70b72a66576c010235bfa6f1adb0672944497523" }

[dev-dependencies]
tokio = { workspace = true }
ed25519-consensus = { workspace = true }
const-hex = { workspace = true }
