[package]
name = "ic_wasm_canister"
description = "An ICP canister wasm module management service on the Internet Computer."
publish = false
repository = "https://github.com/ldclabs/ic-cose/tree/main/src/ic_wasm_canister"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic_cose_types = { path = "../ic_cose_types", version = "0.9" }
candid = { workspace = true, features = ["value", "printer"] }
futures = { workspace = true }
ciborium = { workspace = true }
hex = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
ic-dummy-getrandom-for-wasm = { workspace = true }
